# dynamo-table

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: batch_write_with_retry.rs
src/: error.rs  lib.rs  methods.rs  setup.rs  table.rs
src/consumed_capacity/: mod.rs  stats.rs
src/table/: batch.rs  gsi.rs  helpers.rs  mod.rs  operations.rs  types.rs
tests/: consumed_capacity_tests.rs  dynamodb_batch_tests.rs  dynamodb_crud_tests.rs  dynamodb_gsi_tests.rs  dynamodb_query_tests.rs  generic_table_methods.rs  generic_table_test.rs  integration_test.rs  query_pagination_test.rs  support.rs
tests/helpers/: fixtures.rs  mod.rs
