[package]
name = "dynamo_table"
version = "0.2.0"
edition = "2024"
authors = ["Ernestas Poskus <ernestas.poskus@gmail.com>"]
description = "A high-level DynamoDB table abstraction with get_item, query, update, filter, batch operations, pagination, and type-safe queries"
documentation = "https://docs.rs/dynamo_table"
repository = "https://github.com/quietscroll/dynamo-table"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["dynamodb", "aws", "database", "async", "table"]
categories = ["database", "asynchronous", "api-bindings"]

[dependencies]
aws-config = { version = "1", default-features = false, features = ["rustls"] }
aws-sdk-dynamodb = { version = "1", default-features = false, features = [
  "rustls",
  "rt-tokio",
] }
aws-smithy-runtime-api = "1"
aws-smithy-types-convert = { version = "0.60", default-features = false, features = [
  "convert-streams",
] }
aws-types = "1"
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }
serde = { version = "1", features = ["derive"], default-features = false }
serde_dynamo = { version = "4", default-features = false, features = [
  "aws-sdk-dynamodb+1",
] }
tokio = { version = "1", default-features = false, features = [
  "rt-multi-thread",
  "time",
  "sync",
] }
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
serial_test = "3"
rusty_ulid = "2"
